Fix HV.bat for swt layout issue.
SDK Bug 3185449

Change-Id: I88dfaeb287fdef5cf82a0bc3da286c6c4493f910